--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,11 +6,11 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": null
+          "output_collection_id": "9822433f-9d62-4ebc-90dd-a873a8317cd0"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:55:00.737874+00:00",
-          "start_time": "2023-07-19T02:55:00.580472+00:00"
+          "end_time": "2023-07-19T03:18:36.649019+00:00",
+          "start_time": "2023-07-19T03:18:36.492834+00:00"
         }
       },
       "outputs": [],
@@ -27,11 +27,11 @@
       "id": "25843b51",
       "metadata": {
         "noteable": {
-          "output_collection_id": null
+          "output_collection_id": "0cba5a09-eb43-4847-b10f-7393e6112d53"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:55:03.718239+00:00",
-          "start_time": "2023-07-19T02:55:03.443628+00:00"
+          "end_time": "2023-07-19T03:18:38.555658+00:00",
+          "start_time": "2023-07-19T03:18:38.278373+00:00"
         },
         "datalink": {
           "16f69847-5e7c-47d5-8fbc-e423d5206889": {
@@ -723,6 +723,52 @@
             "sampling_time": "2023-07-19T02:55:03.558752",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_ded4187edd6d4288ba3b94dc0b5d51fe"
+          },
+          "608370da-2ed4-45a9-8212-e60da9c3becb": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 15,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 640,
+              "truncated_num_cols": 15,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 640,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "608370da-2ed4-45a9-8212-e60da9c3becb",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T03:18:38.396931",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_50dcdbddb00649b18f7a3d153cd5ce9c"
           }
         },
         "dx": {
@@ -742,11 +788,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "80263d6f-2e64-47f7-9904-48a6e977bda2"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:55:12.096688+00:00",
-          "start_time": "2023-07-19T02:55:11.931407+00:00"
+          "end_time": "2023-07-19T03:18:38.750946+00:00",
+          "start_time": "2023-07-19T03:18:38.586323+00:00"
         }
       },
       "execution_count": null,
@@ -763,11 +809,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "a4ce315e-9600-4ca0-9989-8137df889e0f"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:55:16.833172+00:00",
-          "start_time": "2023-07-19T02:55:16.631113+00:00"
+          "end_time": "2023-07-19T03:18:39.641950+00:00",
+          "start_time": "2023-07-19T03:18:39.447250+00:00"
         },
         "datalink": {
           "d42ff857-38ea-4219-a869-354699010ccb": {
@@ -1429,6 +1475,50 @@
             "sampling_time": "2023-07-19T02:55:16.675751",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_cd69348b7a7a4339894493c064392272"
+          },
+          "c9dc6d0e-3bde-43ad-84db-f3a69b7b13e2": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 15,
+              "orig_size_bytes": 240,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 15,
+              "truncated_size_bytes": 240,
+              "truncated_string_columns": []
+            },
+            "display_id": "c9dc6d0e-3bde-43ad-84db-f3a69b7b13e2",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T03:18:39.484554",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_a2805f19d9c6497385a06052112b1843"
           }
         },
         "dx": {
@@ -1453,11 +1543,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "02f9e874-71fb-4f85-8e61-776b948ba588"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:55:20.026317+00:00",
-          "start_time": "2023-07-19T02:55:19.866554+00:00"
+          "end_time": "2023-07-19T03:18:39.836896+00:00",
+          "start_time": "2023-07-19T03:18:39.673606+00:00"
         }
       },
       "execution_count": null,
@@ -1470,11 +1560,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "43cf7669-97a9-4ebc-97e3-5eb8da8385c8"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:55:25.817557+00:00",
-          "start_time": "2023-07-19T02:55:25.556850+00:00"
+          "end_time": "2023-07-19T03:18:40.152985+00:00",
+          "start_time": "2023-07-19T03:18:39.869920+00:00"
         },
         "datalink": {
           "ee42736d-9639-42ca-8138-80ed5129674c": {
@@ -2074,6 +2164,52 @@
             "sampling_time": "2023-07-19T02:55:25.656794",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_51c801eaa6d94d73a1bb0e65107d9fa4"
+          },
+          "255d22eb-521a-4c12-9d90-cc149c58d114": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 13,
+              "orig_size_bytes": 1560,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 13,
+              "truncated_size_bytes": 1560,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "255d22eb-521a-4c12-9d90-cc149c58d114",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T03:18:39.991935",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_c56135e164ee45f1a741c30a8a34eb83"
           }
         },
         "dx": {
@@ -2188,11 +2324,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "492c47c0-4e1b-4476-b09c-4269a0471c7b"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:56:30.420983+00:00",
-          "start_time": "2023-07-19T02:56:30.256268+00:00"
+          "end_time": "2023-07-19T03:18:40.328646+00:00",
+          "start_time": "2023-07-19T03:18:40.161368+00:00"
         }
       },
       "execution_count": null,
@@ -2209,11 +2345,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "2a178018-7c1a-4f96-826d-226fac5ff671"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:56:33.658472+00:00",
-          "start_time": "2023-07-19T02:56:33.500973+00:00"
+          "end_time": "2023-07-19T03:18:40.495670+00:00",
+          "start_time": "2023-07-19T03:18:40.335188+00:00"
         }
       },
       "execution_count": null,
@@ -2230,11 +2366,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "2064679d-b396-4920-88c5-e35dc659ed71"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:56:37.403595+00:00",
-          "start_time": "2023-07-19T02:56:37.245124+00:00"
+          "end_time": "2023-07-19T03:18:40.662990+00:00",
+          "start_time": "2023-07-19T03:18:40.504485+00:00"
         }
       },
       "execution_count": null,
@@ -2251,11 +2387,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "fc89bb96-ba0e-4d20-b552-991368adc379"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:56:42.127362+00:00",
-          "start_time": "2023-07-19T02:56:41.806993+00:00"
+          "end_time": "2023-07-19T03:18:40.971445+00:00",
+          "start_time": "2023-07-19T03:18:40.671481+00:00"
         },
         "datalink": {
           "b2ef382d-0457-4d28-a610-e94443bf5384": {
@@ -2901,6 +3037,52 @@
             "sampling_time": "2023-07-19T02:56:41.944958",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
+          },
+          "7b9b92d3-95fa-41ed-bf5f-56f12a05c2dd": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 79080,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 79080,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "7b9b92d3-95fa-41ed-bf5f-56f12a05c2dd",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T03:18:40.790808",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
           }
         },
         "dx": {
@@ -2930,11 +3112,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": null
+          "output_collection_id": "e070ea48-73af-4aef-9799-f717c8bfef65"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:56:52.353051+00:00",
-          "start_time": "2023-07-19T02:56:52.016966+00:00"
+          "end_time": "2023-07-19T03:18:41.522272+00:00",
+          "start_time": "2023-07-19T03:18:41.364894+00:00"
         },
         "datalink": {
           "77c07d07-64a0-4d80-be49-fbab97bdf598": {
@@ -3196,11 +3378,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "1b60e381-5eef-4345-91a9-064402d9b959"
+          "output_collection_id": "a06cf350-5909-4114-871d-aa224c291e89"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:17:44.773061+00:00",
-          "start_time": "2023-07-19T03:17:44.568824+00:00"
+          "end_time": "2023-07-19T03:18:41.717217+00:00",
+          "start_time": "2023-07-19T03:18:41.530005+00:00"
         },
         "datalink": {
           "8806e994-1e21-41c4-b843-fb15ac437a3e": {
@@ -3730,6 +3912,50 @@
             "sampling_time": "2023-07-19T03:17:44.616204",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_81938057c6b14b65860f16ecf90fe441"
+          },
+          "9b88c04c-780d-4b4f-9a51-ca935c51187f": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 30,
+              "orig_size_bytes": 480,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 30,
+              "truncated_size_bytes": 480,
+              "truncated_string_columns": []
+            },
+            "display_id": "9b88c04c-780d-4b4f-9a51-ca935c51187f",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T03:18:41.561795",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_bd9243dabf7e422198339f00c2a74c74"
           }
         }
       },
@@ -3743,11 +3969,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "a491b9be-d769-4e96-94de-cd5ed259626b"
+          "output_collection_id": "ee67cdcd-0dab-48ad-bfd3-7527e5f776d1"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:17:56.308592+00:00",
-          "start_time": "2023-07-19T03:17:55.767207+00:00"
+          "end_time": "2023-07-19T03:18:44.002288+00:00",
+          "start_time": "2023-07-19T03:18:41.725913+00:00"
         }
       },
       "execution_count": null,
@@ -3764,7 +3990,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "f67c7ac6-5235-4e6a-a390-dc1d6cf9c813"
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:37:16.890152+00:00",
@@ -4207,7 +4433,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": null
+          "output_collection_id": "76c009da-8c18-4d95-ba9a-f629ab8235d6"
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:37:17.057783+00:00",
@@ -4238,7 +4464,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "5fd5a379-6661-4896-ab63-b2a0132debe7"
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:37:17.332224+00:00",
@@ -4259,7 +4485,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "f9d717f4-f4f7-4983-98ec-af82d277d5b4"
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:37:17.695158+00:00",
@@ -4834,7 +5060,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "fa69c551-6906-45b1-93c2-f539030e1ac6"
+      "last_transaction_id": "dc930284-c5e1-4c4e-bc82-160fa0b013c0"
     }
   },
   "nbformat": 4,
