--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -3972,11 +3972,61 @@
           "source_hidden": false
         },
         "noteable": {
-          "cell_type": "code"
+          "cell_type": "code",
+          "output_collection_id": "6f968c1a-4feb-4675-85ac-6b1883c22906"
+        },
+        "ExecuteTime": null,
+        "datalink": {
+          "d6b6bf13-11a9-4332-8b11-aa32a1e7aaec": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 17,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 94896,
+              "truncated_num_cols": 17,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 94896,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "d6b6bf13-11a9-4332-8b11-aa32a1e7aaec",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T03:28:39.368486",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          }
         }
       },
       "execution_count": null,
-      "source": "unclean_df2 ",
+      "source": "unclean_df2 = unclean_df\nunclean_df2",
       "outputs": []
     },
     {
@@ -5189,7 +5239,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "9290c2fa-f5f0-4130-b993-bb4fb090a1cd"
+      "last_transaction_id": "886e82a7-c5ba-4a1d-9190-67dc3ef64e15"
     }
   },
   "nbformat": 4,
