--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -5244,11 +5244,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "933803c1-f141-4993-8dd3-416d1f64c6cf"
+          "output_collection_id": "258fec47-c639-49c0-bdc2-2cd7a609e36d"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T04:18:01.276947+00:00",
-          "start_time": "2023-07-19T04:17:55.181813+00:00"
+          "end_time": "2023-07-19T04:20:59.563444+00:00",
+          "start_time": "2023-07-19T04:20:59.325477+00:00"
         }
       },
       "execution_count": null,
@@ -5265,11 +5265,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "08d1f6e6-630d-47d7-8b63-6bcf3fe9647a"
+          "output_collection_id": "cf9d73f4-319b-4509-b3bb-6882d2011edd"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T04:18:43.106571+00:00",
-          "start_time": "2023-07-19T04:18:42.874371+00:00"
+          "end_time": "2023-07-19T04:21:04.124868+00:00",
+          "start_time": "2023-07-19T04:21:03.884996+00:00"
         }
       },
       "execution_count": null,
@@ -5286,11 +5286,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "0e7574ad-eca5-42ff-9970-61f9e3f31b48"
+          "output_collection_id": "c6d46ff6-a5c8-48db-9ab7-eff7ff30d7c4"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T04:18:47.435623+00:00",
-          "start_time": "2023-07-19T04:18:47.085332+00:00"
+          "end_time": "2023-07-19T04:21:07.112564+00:00",
+          "start_time": "2023-07-19T04:21:06.769865+00:00"
         },
         "datalink": {
           "14ce3902-4787-4527-b196-1d667eecf7db": {
@@ -5798,6 +5798,52 @@
             "sampling_time": "2023-07-19T04:18:47.252332",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
+          },
+          "520b358a-20f4-49a6-b3a1-78b064e44868": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 24,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 131800,
+              "truncated_num_cols": 24,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 131800,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "520b358a-20f4-49a6-b3a1-78b064e44868",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T04:21:06.929160",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
           }
         },
         "dx": {
@@ -5953,7 +5999,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "1f194e4d-ada5-4382-a03d-03470278b176"
+      "last_transaction_id": "3feed0de-bddd-4bf8-ba21-3722903e5a3d"
     }
   },
   "nbformat": 4,
